--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>RedFrog Conf 2013</title>
+<title>RedFrog Conf 2014</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="description" content="" />
 <meta name="author" content="" />
@@ -23,11 +23,11 @@
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 <!-- Fav and touch icons -->
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="ico/apple-touch-icon-144-precomposed.png" />
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png" />
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png" />
-<link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png" />
-<link rel="shortcut icon" href="ico/favicon.ico" />
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/ico/apple-touch-icon-144-precomposed.png" />
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/ico/apple-touch-icon-114-precomposed.png" />
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/ico/apple-touch-icon-72-precomposed.png" />
+<link rel="apple-touch-icon-precomposed" href="/ico/apple-touc/h-icon-57-precomposed.png" />
+<link rel="shortcut icon" href="/ico/favicon.ico/" />
 </head>
 
 <body>
@@ -38,21 +38,24 @@
   <div class="navbar-inner">
     <div class="container">
       <div class="title">
-        <a href="http://ruby.froscon.org">
-          RedFrog Conf 2013
+        <a href="index.html">
+          RedFrog Conf 2014
         </a>
       </div>
-      <div class="navigation">
-        <nav>
-        <ul class="nav pull-right">
-          <li class="current"><a href="#intro">Intro</a></li>
-          <li><a href="#hintergrund">Hintergrund</a></li>
-          <li><a href="#programm">Programm</a></li>
-          <li><a href="#call-for-proposals">Call for Proposals</a></li>
-          <li><a href="#ort">Ort</a></li>
-        </ul>
-        </nav>
-      </div>
+      
+        <div class="navigation">
+          <nav>
+            <ul class="nav pull-right">
+              <li class="current"><a href="#intro">Intro</a></li>
+              <li><a href="#hintergrund">Hintergrund</a></li>
+              <li><a href="#programm">Programm</a></li>
+              <li><a href="#call-for-proposals">Call for Proposals</a></li>
+              <li><a href="#ort">Ort</a></li>
+              <li><a href="#geschichte">Geschichte</a></li>
+            </ul>
+          </nav>
+        </div>
+      
       <!--/.nav-collapse -->
     </div>
   </div>
@@ -66,8 +69,8 @@
   <div class="icon">
     <img src="img/ruby_froscon_logo-big.png" width="477">
   </div>
-  <h1><span class="ruby">Red</span><span class="froscon">Frog</span> Conf 2013</h1>
-  <h2>Ruby meets FrOSCon - Ruby Subkonferenz auf der FrOSCon 8</h2>
+  <h1><span class="ruby">Red</span><span class="froscon">Frog</span> Conf 2014</h1>
+  <h2>Ruby meets FrOSCon - auch auf der FrOSCon 9</h2>
 </div>
 </section>
 <!-- end intro -->
@@ -82,12 +85,18 @@
       </div>
       <div class="sub-heading">
         <p>
-          Die RedFrog ist die Ruby Subkonferenz der Froscon. Thematisch umfasst unsere Konferenz Ruby im weitesten Sinne:
-          Ob Rails oder Ruby Motion, ob JRuby oder Rubinius, Entwicklung oder Operations, Design Patterns oder Entwicklerkultur –
-          wir machen keine weiteren Vorgaben. Die Vorträge werden bevorzugt auf Deutsch gehalten, aber wir sind auch offen für
-          Vorträge auf Englisch. Da wir eine Subkonferenz sind, brauchst du nur
-          <a href="http://www.froscon.de/en/visitors/visitors">Eintritt bei der Froscon zu zahlen</a>
-          – wir verlangen keinen zusätzlichen Eintritt. Und natürlich kannst du auch an allen Talks der FrOSCon teilnehmen.
+        Die RedFrog ist eine Veranstaltung für Ruby-Interessierte auf der FrOSCon.
+        Wir verstehen uns als Konferenz, auch wenn wir dieses Jahr nicht offiziell als Subkonferenz der FrOSCon geführt werden.
+        Für euch als Besucher hat das keine fast keine Auswirkungen. Es wird weiterhin Vorträge geben - und dieses Jahr außerdem noch
+        einen Workshop.
+        </p>
+        <p>
+        Thematisch umfasst unsere Konferenz Ruby im weitesten Sinne:
+        Ob Rails oder Ruby Motion, ob JRuby oder Rubinius, Entwicklung oder Operations, Design Patterns oder Entwicklerkultur –
+        wir machen keine weiteren Vorgaben. Die Vorträge werden bevorzugt auf Deutsch gehalten, aber wir sind auch offen für
+        Vorträge auf Englisch. Da wir einen Workshop-Raum auf der FrOSCon zur Verfügung haben, brauchst du nur
+        <a href="http://www.froscon.de/en/visitors/visitors">Eintritt bei der Froscon zu zahlen</a>
+        – wir verlangen keinen zusätzlichen Eintritt. Und natürlich kannst du auch an allen Angeboten und Vorträgen der FrOSCon teilnehmen.
         </p>
       </div>
     </div>
@@ -106,231 +115,12 @@
       </div>
       <div class="sub-heading">
         <p>
-          So, das war sie. Die RedFrog 2013. Für alle die nicht da waren, einen Talk verpasst haben, oder
-          nochmal sehen wollen, haben wir alle verfügbaren Videos verlinkt.
+        Sobald es Details zum Programm gibt, werden wir diese hier
+        veröffentlichen. Folge uns auf <a href="https://twitter.com/RedFrogConf">Twitter</a>, um Neuigkeiten direkt zu erfahren.
         </p>
       </div>
     </div>
   </div>
-  <div class="row">
-    <div class="span5 offset2">
-      <div class="box aligncenter">
-        <h4>Tag 1</h4>
-      </div>
-    </div>
-    <div class="span5">
-      <div class="box aligncenter">
-        <h4>Tag 2</h4>
-      </div>
-    </div>
-  </div>
-
-  <!-- 10:30 - 11:00 -->
-  <div class="row">
-    <div class="span2">
-      <div class="box aligncenter">
-        <span class="timeslot">
-          10:00 - 11:00
-        </span>
-      </div>
-    </div>
-    <div class="span5">
-      <div class="box aligncenter">
-        <div class="halftop">
-          <h4><a href="/talks/weck-den-geek-in-dir"><strong>Weck den Geek in dir</strong></a></h4>
-        </div>
-        <p>
-          mit <em>Bodo Tasche</em> (Achtung, andere Startzeit: 10:30 - 11:00)
-        </p>
-      </div>
-    </div>
-    <div class="span5">
-      <div class="box aligncenter">
-        <div class="halftop">
-          <h4><a href="/talks/ruby-is-magic"><strong>Ruby is Magic</strong></a></h4>
-        </div>
-        <p>
-          mit <em>Dirk Breuer und Sebastian Cohnen</em>
-        </p>
-      </div>
-    </div>
-  </div>
-
-  <!-- 11:15 - 12:15 -->
-  <div class="row">
-    <div class="span2">
-      <div class="box aligncenter">
-        <span class="timeslot">
-          11:15 - 12:15
-        </span>
-      </div>
-    </div>
-    <div class="span5">
-      <div class="box aligncenter">
-        <div class="halftop">
-          <h4><a href="/talks/can-we-write-perfect-tests-maybe"><strong>Can we write perfect tests? - Maybe!</strong></a></h4>
-        </div>
-        <p>
-          mit <em>Markus Schirp</em>
-        </p>
-      </div>
-      <div class="box aligncenter">
-        <div class="halftop">
-          <h4><a href="/talks/sample-architecture-of-a-rails-b2b-plattform"><strong>Sample architecture of a Rails B2B-plattform</strong></a></h4>
-        </div>
-        <p>
-          mit <em>Benedikt Voigt</em>
-        </p>
-      </div>
-    </div>
-    <div class="span5">
-      <div class="box aligncenter">
-        <div class="halftop">
-          <h4><a href="/talks/concurrency-matters"><strong>Concurrency Matters</strong></a></h4>
-        </div>
-        <p>mit <em>Mateus Armando</em></p>
-      </div>
-    </div>
-  </div>
-
-  <!-- 12:15 - 14:00 -->
-  <div class="row">
-    <div class="span2">
-      <div class="box aligncenter">
-        <span class="timeslot">
-          12:15 - 14:00
-        </span>
-      </div>
-    </div>
-    <div class="span10">
-      <div class="box aligncenter">
-        <h4><strong>Mittagspause</strong></h4>
-      </div>
-    </div>
-  </div>
-
-  <!-- 14:00 - 15:00 -->
-  <div class="row">
-    <div class="span2">
-      <div class="box aligncenter">
-        <span class="timeslot">
-          14:00 - 15:00
-        </span>
-      </div>
-    </div>
-    <div class="span5">
-      <div class="box aligncenter">
-        <div class="halftop">
-          <h4><a href="/talks/agil-von-kopf-bis-fuss"><strong>Agil von Kopf bis Fuß</strong></a></h4>
-        </div>
-        <p>mit <em>Daniel Lehmann</em></p>
-      </div>
-    </div>
-    <div class="span5">
-      <div class="box aligncenter">
-        <div class="halftop">
-          <h4><a href="/talks/testbarkeit-in-ruby"><strong>Testbarkeit in Ruby </strong></a></h4>
-        </div>
-        <p>mit <em>Eduard Litau</em></p>
-      </div>
-    </div>
-  </div>
-
-  <!-- 15:15 - 16:15 -->
-  <div class="row">
-    <div class="span2">
-      <div class="box aligncenter">
-        <span class="timeslot">
-          15:15 - 16:15
-        </span>
-      </div>
-    </div>
-    <div class="span5">
-      <div class="box aligncenter">
-        <div class="halftop">
-          <h4><a href="/talks/deployment-ohne-ziepen"><strong>Deployment ohne Ziepen</strong></a></h4>
-        </div>
-        <p>mit <em>Sebastian Schulze</em></p>
-      </div>
-    </div>
-    <div class="span5">
-      <div class="box aligncenter">
-        <div class="halftop">
-          <h4><a href="/talks/oo-ohne-vererbung"><strong>OO ohne Vererbung</strong></a></h4>
-        </div>
-        <p>mit <em>Lucas Dohmen</em></p>
-      </div>
-    </div>
-  </div>
-
-  <!-- 16:30 - 17:30 -->
-  <div class="row">
-    <div class="span2">
-      <div class="box aligncenter">
-        <span class="timeslot">
-          16:30 - 17:30
-        </span>
-      </div>
-    </div>
-    <div class="span5">
-      <div class="box aligncenter">
-        <div class="halftop">
-          <h4><a href="/talks/building-awesome-ruby-command-line-apps"><strong>Building Awesome Ruby Command Line Apps</strong></a></h4>
-        </div>
-        <p>mit <em>Christian Vervoorts</em></p>
-      </div>
-    </div>
-    <div class="span5">
-      <div class="box aligncenter">
-        <div class="halftop">
-          <h4><a href="/talks/the-fancy-programming-language"><strong>The Fancy Programming Language</strong></a></h4>
-        </div>
-        <p>mit <em>Christopher Bertels</em></p>
-      </div>
-    </div>
-  </div>
-
-  <!-- 17:45 - 18:45 -->
-  <div class="row">
-    <div class="span2">
-      <div class="box aligncenter">
-        <span class="timeslot">
-          17:45 - 18:45
-        </span>
-      </div>
-    </div>
-    <div class="span5">
-      <div class="box aligncenter">
-        <div class="halftop">
-          <h4><a href="/talks/true-false-cats-dogs-designer-entwickler"><strong>True &amp; False. Cats &amp; Dogs. Designer &amp; Entwickler?</strong></a></h4>
-        </div>
-        <p>mit <em>Liane Thönnes und Tim Schneider</em></p>
-      </div>
-    </div>
-  </div>
-
-  <!-- Ab 19:00 -->
-  <div class="row">
-    <div class="span2">
-      <div class="box aligncenter">
-        <span class="timeslot">
-          Ab 19:00
-        </span>
-      </div>
-    </div>
-    <div class="span5">
-      <div class="box aligncenter">
-        <div class="halftop">
-          <h4><strong>FrOSCon Party</strong></h4>
-        </div>
-        <p>Gefeiert wird natürlich zusammen!</p>
-      </div>
-    </div>
-  </div>
-
-</div>
-</section>
-<!-- end section programm -->
 
 <!-- section call-for-proposals -->
 <section id="call-for-proposals" class="section gray-bg">
@@ -341,20 +131,23 @@
         <h3><span>Call for Proposals</span></h3>
       </div>
 
-      <blockquote class="twitter-tweet" align="center"><p>We finished selecting the amazing speakers :) All people that proposed: You will get an eMail tomorrow :)</p>&mdash; RedFrog Conf (@RedFrogConf)
-        <a href="https://twitter.com/RedFrogConf/statuses/358580632533733376">July 20, 2013</a>
-      </blockquote>
-
       <div class="sub-heading">
         <p>
-          <strong>Geschafft!</strong> – Vielen Dank an alle Einsendungen. Dank eurer zahlreichen Vorschläge konnten wir
-          unserer Meinung nach ein spannendes und abwechlsungsreiches Programm zusammenstellen. Sobald wir die
-          Zusammenfassungen für jeden Talk haben, sowie die Fotos und Kurz-Biographien werden wir das Programm hier
-          veröffentlichen. Zusätzlich wird es natürlich auch auf der <a href="http://programm.froscon.org/2013/">offizielle FrOSCon Seite erscheinen</a>.
+        Eine Konferenz ist immer nur so gut wie ihre Vorträge. Und ein Vortrag immer nur so gut wie der Vortragende.
+        Wir brauchen also eure Unterstützung! Egal ob du Anfänger oder ein alter Hase bist, egal ob du dich mit
+        Webprogrammierung, der Anbindung von Banken oder Hausautomatisierung beschäftigst:
+        Wir freuen uns auf interessante Themen von interessanten Menschen. Du fühlst dich mit einem Workshop wohler?
+        Kein Problem, wir sind offen für kreative Einfälle.
         </p>
 
         <p>
-          Wir freuen uns auf eine spannende Konferenz!
+        Du bist dir nicht ganz sicher, ob du sprechen möchtest oder über was? Schreib uns einfach! Wir helfen und
+        ermutigen dich gerne :) Vielleicht hilft dir auch die wunderbare Seite
+        <a href="http://weareallaweso.me">We are all awesome</a>
+        </p>
+
+        <p>
+        Noch ist unser Call for Proposals nicht eröffnet. Das kommt aber bald!
         </p>
       </div>
     </div>
@@ -373,7 +166,7 @@
       </div>
       <div class="sub-heading">
         <p>
-          Die RedFrog Conf 2013 fand im Rahmen der FrOSCon 8 am <strong>24. und 25. August 2013</strong> an der <strong>Hochschule Bonn-Rhein-Sieg in Sankt Augustin</strong>
+          Die RedFrog Conf 2014 findet im Rahmen der FrOSCon 9 am <strong>23. und 24. August 2014</strong> an der <strong>Hochschule Bonn-Rhein-Sieg in Sankt Augustin</strong>
           statt. Für nähere Infos möchten wir euch gerne auf die <a href="http://www.froscon.de/besucher/besucher/">offizielle FrOSCon Seite</a> verweisen.
         </p>
       </div>
@@ -404,6 +197,28 @@
 </section>
 <!-- end section ort -->
 
+<!-- section geschichte -->
+<section id="geschichte" class="section">
+<div class="container">
+  <div class="row">
+    <div class="span12">
+      <div class="heading">
+        <h3><span>Geschichte</span></h3>
+      </div>
+      <div class="sub-heading">
+        <p>
+        Das letzte Jahr hat uns die RedFrogConf viel Spaß gemacht. Informationen zum Programm des Vorjahres findet ihr hier:
+        <a href="2013.html">RedFrogConf 2013</a>
+        </p>
+        <p>
+        Wir hoffen auch dieses Jahr auf viel Spaß und neue Erfahrungen. Kommt vorbei und macht mit!
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+</section>
+
 <footer>
 <div class="verybottom">
   <div class="container">
@@ -416,7 +231,7 @@
             </a>
           </div>
           <p>
-            &copy; Ruby FrOSCon Team 2013 - <a href="http://creativecommons.org/licenses/by-sa/3.0/de/deed.en_US">CC-BY-SA</a>
+            &copy; Ruby FrOSCon Team 2013-2014 - <a href="http://creativecommons.org/licenses/by-sa/3.0/de/deed.en_US">CC-BY-SA</a>
           </p>
         </div>
       </div>
