--- a/index.html
+++ b/index.html
@@ -108,40 +108,275 @@
 </section>
 <!-- end section hintergrund -->
 
+
 <!-- section programm -->
 <section id="programm" class="section parallax dark">
-<div class="container">
-  <div class="row">
-    <div class="span12">
-      <div class="heading">
-        <h3><span>Programm</span></h3>
-      </div>
-      <div class="sub-heading">
-        <p>
-        Sobald es Details zum Programm gibt, werden wir diese hier
-        veröffentlichen. Folge uns auf <a href="https://twitter.com/RedFrogConf">Twitter</a>, um Neuigkeiten direkt zu erfahren.
-        </p>
-      </div>
-    </div>
-  </div>
-
-<!-- section call-for-proposals -->
-<section id="call-for-proposals" class="section gray-bg">
-<div class="container">
-  <div class="row">
-    <div class="span12">
-      <div class="heading">
-        <h3><span>Call for Proposals</span></h3>
-      </div>
-
-      <div class="sub-heading">
-        <p>Der CfP ist nun beendet. Bald verkünden wir das Programm!</p>
+  <div class="container">
+    <div class="row">
+      <div class="span12">
+        <div class="heading">
+          <h3><span>Programm</span></h3>
+        </div>
+        <div class="sub-heading">
+          <p>
+            Unser Programm dieses Jahr.
+          </p>
+        </div>
       </div>
     </div>
+
+    <div class="row">
+      <div class="span5 offset2">
+        <div class="box aligncenter">
+          <h4>Tag 1</h4>
+        </div>
+      </div>
+      <div class="span5">
+        <div class="box aligncenter">
+          <h4>Tag 2</h4>
+        </div>
+      </div>
+    </div>
+
+    <!-- 10:00 - 10:40 -->
+    <div class="row">
+      <div class="span2">
+        <div class="box aligncenter">
+          <span class="timeslot">
+            10:00 - 10:40
+          </span>
+        </div>
+      </div>
+      <div class="span5">
+        <div class="box aligncenter">
+          <div class="halftop">
+            <h4><strong>Not being an asshole is not enough</strong></h4>
+          </div>
+          <p>mit <em>Ellen König</em></p>
+        </div>
+      </div>
+    </div>
+
+    <!-- 10:45 - 11:25 -->
+    <div class="row">
+      <div class="span2">
+        <div class="box aligncenter">
+          <span class="timeslot">
+            10:45 - 11:25
+          </span>
+        </div>
+      </div>
+      <div class="span5">
+        <div class="box aligncenter">
+          <div class="halftop">
+            <h4><strong>Ruby MVC from scratch with Rack</strong></h4>
+          </div>
+          <p>mit <em>Marco Schaden</em></p>
+        </div>
+      </div>
+      <div class="span5">
+        <div class="box aligncenter">
+          <div class="halftop">
+            <h4><strong>Code Padawans</strong></h4>
+          </div>
+          <p>mit <em>Ute Mayer und Magdalena Frankiewicz</em></p>
+        </div>
+      </div>
+    </div>
+
+    <!-- 11:30 - 12:10 -->
+    <div class="row">
+      <div class="span2">
+        <div class="box aligncenter">
+          <span class="timeslot">
+            11:30 - 12:10
+          </span>
+        </div>
+      </div>
+      <div class="span5">
+        <div class="box aligncenter">
+          <div class="halftop">
+            <h4><strong>Testbarkeit in Ruby</strong></h4>
+          </div>
+          <p>mit <em>Ede</em></p>
+        </div>
+      </div>
+      <div class="span5">
+        <div class="box aligncenter">
+          <div class="halftop">
+            <h4><strong>JRuby, a Pi and some Java Database</strong></h4>
+          </div>
+          <p>mit <em>Phil Fehre</em></p>
+        </div>
+      </div>
+    </div>
+
+    <!-- 12:10 – 14:00 -->
+    <div class="row">
+      <div class="span2">
+        <div class="box aligncenter">
+          <span class="timeslot">
+            12:10 – 14:00
+          </span>
+        </div>
+      </div>
+      <div class="span10">
+        <div class="box aligncenter">
+          <h4><strong>Mittagspause</strong></h4>
+        </div>
+      </div>
+    </div>
+
+    <!-- 14:00 - 14:40 -->
+    <div class="row">
+      <div class="span2">
+        <div class="box aligncenter">
+          <span class="timeslot">
+            14:00 - 14:40
+          </span>
+        </div>
+      </div>
+      <div class="span5">
+        <div class="box aligncenter">
+          <div class="halftop">
+            <h4><strong>Workshop</strong></h4>
+          </div>
+          <p>mit <em>Dirk, Tobi, Bodo, Essy und Lucas</em></p>
+        </div>
+      </div>
+      <div class="span5">
+        <div class="box aligncenter">
+          <div class="halftop">
+            <h4><strong>A revolutionary idea: why not use a job queue system for your job queue?</strong></h4>
+          </div>
+          <p>mit <em>Bodo Tasche</em></p>
+        </div>
+      </div>
+    </div>
+
+    <!-- 14:45 - 15:25 -->
+    <div class="row">
+      <div class="span2">
+        <div class="box aligncenter">
+          <span class="timeslot">
+            14:45 - 15:25
+          </span>
+        </div>
+      </div>
+      <div class="span5">
+        <div class="box aligncenter">
+          <div class="halftop">
+            <h4><strong>Workshop</strong></h4>
+          </div>
+          <p>mit <em>Dirk, Tobi, Bodo, Essy und Lucas</em></p>
+        </div>
+      </div>
+      <div class="span5">
+        <div class="box aligncenter">
+          <div class="halftop">
+            <h4><strong>Datenbank-Release-Management mit PostgreSQL und Ruby-on-Rails</strong></h4>
+          </div>
+          <p>mit <em>Frank Lancaster</em></p>
+        </div>
+      </div>
+    </div>
+
+    <!-- 15:30 - 16:10 -->
+    <div class="row">
+      <div class="span2">
+        <div class="box aligncenter">
+          <span class="timeslot">
+            15:30 - 16:10
+          </span>
+        </div>
+      </div>
+      <div class="span5">
+        <div class="box aligncenter">
+          <div class="halftop">
+            <h4><strong>Workshop</strong></h4>
+          </div>
+          <p>mit <em>Dirk, Tobi, Bodo, Essy und Lucas</em></p>
+        </div>
+      </div>
+      <div class="span5">
+        <div class="box aligncenter">
+          <div class="halftop">
+            <h4><strong>Frab</strong></h4>
+          </div>
+          <p>mit <em>Mario Manno</em></p>
+        </div>
+      </div>
+    </div>
+
+    <!-- 16:15 - 16:55 -->
+    <div class="row">
+      <div class="span2">
+        <div class="box aligncenter">
+          <span class="timeslot">
+            16:15 - 16:55
+          </span>
+        </div>
+      </div>
+      <div class="span5">
+        <div class="box aligncenter">
+          <div class="halftop">
+            <h4><strong>Workshop</strong></h4>
+          </div>
+          <p>mit <em>Dirk, Tobi, Bodo, Essy und Lucas</em></p>
+        </div>
+      </div>
+      <div class="span5">
+        <div class="box aligncenter">
+          <div class="halftop">
+            <h4><strong>How to make Guacamole?</strong></h4>
+          </div>
+          <p>mit <em>Dirk Breuer</em></p>
+        </div>
+      </div>
+    </div>
+
+    <!-- bis 18:00 -->
+    <div class="row">
+      <div class="span2">
+        <div class="box aligncenter">
+          <span class="timeslot">
+            bis 18:00
+          </span>
+        </div>
+      </div>
+      <div class="span5">
+        <div class="box aligncenter">
+          <div class="halftop">
+            <h4><strong>Workshop</strong></h4>
+          </div>
+          <p>mit <em>Dirk, Tobi, Bodo, Essy und Lucas</em></p>
+        </div>
+      </div>
+    </div>
+
+
+    <!-- Ab 19:00 -->
+    <div class="row">
+      <div class="span2">
+        <div class="box aligncenter">
+          <span class="timeslot">
+            Ab 19:00
+          </span>
+        </div>
+      </div>
+      <div class="span5">
+        <div class="box aligncenter">
+          <div class="halftop">
+            <h4><strong>FrOSCon Party</strong></h4>
+          </div>
+          <p>Gefeiert wird natürlich zusammen!</p>
+        </div>
+      </div>
+    </div>
+
   </div>
-</div>
 </section>
-<!-- section call-for-proposals -->
+<!-- end section programm -->
 
 <!-- section ort -->
 <section id="ort" class="section">
