--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         </div>
       </div>
       <div class="span5">
-        <div class="box aligncenter">
+        <div class="box aligncenter workshop">
           <div class="halftop">
             <h4><strong>Workshop</strong></h4>
           </div>
@@ -270,7 +270,7 @@
         </div>
       </div>
       <div class="span5">
-        <div class="box aligncenter">
+        <div class="box aligncenter workshop-invisible">
           <div class="halftop">
             <h4><strong>Workshop</strong></h4>
           </div>
@@ -298,7 +298,7 @@
         </div>
       </div>
       <div class="span5">
-        <div class="box aligncenter">
+        <div class="box aligncenter workshop-invisible">
           <div class="halftop">
             <h4><strong>Workshop</strong></h4>
           </div>
@@ -326,7 +326,7 @@
         </div>
       </div>
       <div class="span5">
-        <div class="box aligncenter">
+        <div class="box aligncenter workshop-invisible">
           <div class="halftop">
             <h4><strong>Workshop</strong></h4>
           </div>
@@ -354,7 +354,7 @@
         </div>
       </div>
       <div class="span5">
-        <div class="box aligncenter">
+        <div class="box aligncenter workshop-invisible">
           <div class="halftop">
             <h4><strong>Workshop</strong></h4>
           </div>
